# phelix

./: .env.sample  .gitignore  .gitmodules  CHANGELOG.md  README.md  dev-requirements.txt  environment.yaml  o  pyproject.toml  run_alphafold.py  setup.py  uv_indexes.txt
.hydra/: config.yaml  hydra.yaml  (+1 more)
alphafold3/: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  fetch_databases.sh  pyproject.toml  requirements.txt  run_alphafold.py  run_alphafold_data_test.py  run_alphafold_debug_local.py  run_alphafold_debug_sherlock.py  run_alphafold_local.py  run_alphafold_sherlock.py  run_alphafold_test.py
alphafold3/.github/workflows/: ci.yaml
alphafold3/docker/: Dockerfile
alphafold3/docs/: community_tools.md  input.md  installation.md  known_issues.md  metadata_antibody_antigen.csv  metadata_antibody_antigen.md  model_parameters.md  performance.md
alphafold3/input_examples/json_examples_lab_desktop/ligand_protein_template_conditioning/: 5S9U_FAD.json  7B56_ANP.json
alphafold3/input_examples/json_examples_sherlock/ligand_protein_template_conditioning/: 5S9U_FAD.json  7B56_ANP.json
alphafold3/input_examples/ligand_protein_template_conditioning/: 5S9U_FAD.json  7B56_ANP.json
alphafold3/input_examples/normal/: 2B3P.json
alphafold3/input_examples/templates/: 2B3P.cif
alphafold3/input_json_examples/ligand_protein_template_conditioning/: 5S9U_FAD.json  7B56_ANP.json
alphafold3/input_templates/: 7B56.cif
alphafold3/input_templates_examples/: 5S9U.cif
alphafold3/legal/: WEIGHTS_PROHIBITED_USE_POLICY-Bahasa-Indonesia.md  WEIGHTS_PROHIBITED_USE_POLICY-Espanol-Latinoamerica.md  WEIGHTS_PROHIBITED_USE_POLICY-Francais-Canada.md  WEIGHTS_PROHIBITED_USE_POLICY-Portugues-Brazil.md  WEIGHTS_TERMS_OF_USE-Espanol-Latinoamerica.md  WEIGHTS_TERMS_OF_USE-Francais-Canada.md  WEIGHTS_TERMS_OF_USE-Portugues-Brazil.md
alphafold3/src/alphafold3/: build_data.py  run_alphafold.py  version.py
alphafold3/src/alphafold3/common/: folding_input.py  safe_pickle.py
alphafold3/src/alphafold3/constants/: chemical_component_sets.py  chemical_components.py  side_chains.py
alphafold3/src/alphafold3/constants/converters/: ccd_pickle_gen.py  chemical_component_sets.pickle  chemical_component_sets_gen.py
alphafold3/src/alphafold3/data/: featurisation.py  msa.py  msa_config.py  parsers.py  pipeline.py  templates.py
alphafold3/src/alphafold3/data/cpp/: msa_profile_pybind.h
alphafold3/src/alphafold3/model/: data3.py  data_constants.py  feat_batch.py  features.py  mkdssp_pybind.cc  mkdssp_pybind.h  mmcif_metadata.py  model.py  model_config.py  msa_pairing.py  params.py  post_processing.py  protein_data_processing.py
alphafold3/src/alphafold3/structure/: bonds.py  chemical_components.py  mmcif.py  parsing.py  structure.py  structure_tables.py  table.py
alphafold3/src/alphafold3/test_data/: featurised_example.json
alphafold3/tests/: test_runner_module.py
modelforge/: .env  .gitignore  Makefile  README.md  pyproject.toml
modelforge/.github/workflows/: lint_trunk.yaml
modelforge/configs/: inference.yaml  train.yaml  validate.yaml
modelforge/configs/callbacks/: dump_validation_structures.yaml  metrics_logging.yaml  train_logging.yaml
modelforge/configs/dataloader/: default.yaml
modelforge/configs/datasets/: base.yaml  pdb_and_distillation.yaml  pdb_only.yaml
modelforge/configs/datasets/train/: disorder_distillation.yaml  domain_distillation.yaml  na_complex_distillation.yaml  rna_monomer_distillation.yaml
modelforge/configs/datasets/val/: af3_ab_set.yaml  af3_validation.yaml  base.yaml  runs_and_poses.yaml
modelforge/configs/debug/: default.yaml  train_specific_examples.yaml
modelforge/configs/experiment/: quick-rf3-with-confidence.yaml
modelforge/configs/experiment/pretrained/: rf3.yaml  rf3_with_confidence.yaml
modelforge/configs/hydra/: default.yaml  no_logging.yaml
modelforge/configs/inference_engine/: base.yaml  rf3.yaml
modelforge/configs/logger/: wandb.yaml
modelforge/configs/model/: rf3.yaml  rf3_with_confidence.yaml
modelforge/configs/model/components/: rf3_net_with_confidence_head.yaml
modelforge/configs/model/optimizers/: adam.yaml
modelforge/configs/model/schedulers/: af3.yaml
modelforge/configs/paths/: default.yaml
modelforge/configs/paths/data/: default.yaml
modelforge/configs/trainer/: ddp.yaml  rf3.yaml
modelforge/configs/trainer/loss/: structure_prediction.yaml  structure_prediction_with_confidence.yaml
modelforge/configs/trainer/metrics/: structure_prediction.yaml
modelforge/docs/rf3/examples/: 3en2_from_file.cif  3en2_from_json_with_msa.json  5hkn_from_file.cif  9dfn.cif  9dfn_template_ligand_and_protein.json
modelforge/src/modelhub/: __init__.py  alignment.py  chemical.py  cli.py  inference.py  kinematics.py  resolvers.py  train.py  util_module.py  validate.py
modelforge/src/modelhub/callbacks/: base.py  dump_validation_structures.py  health_logging.py  metrics_logging.py  timing_logging.py
modelforge/src/modelhub/data/: ground_truth_template.py  paired_msa.py  pipelines.py  rotation_augmentation.py
modelforge/src/modelhub/diffusion_samplers/: inference_sampler.py
modelforge/src/modelhub/inference_engines/: README.md  rf3.py
modelforge/src/modelhub/loss/: af3_losses.py
modelforge/src/modelhub/metrics/: chiral.py  clashing_chains.py  distogram.py  lddt.py  metric_utils.py  predicted_error.py  rasa.py  selected_distances.py
modelforge/src/modelhub/model/: RF3_blocks.py  RF3_structure.py
modelforge/src/modelhub/training/: EMA.py  checkpoint.py  schedulers.py
modelforge/src/modelhub/utils/: datasets.py  ddp.py  frames.py  io.py  logging.py  loss.py  predicted_error.py  recycling.py  torch_utils.py
modelforge/tests/: conftest.py  test_ground_truth_template.py  test_inference_pipelines.py  test_inference_regression.py  test_metrics.py  test_torch_utils.py  test_weight_loading.py  test_write_confidence.py
modelforge/tests/data/: 5vht_from_file.cif  5vht_from_json.json  multiple_examples_from_json.json
modelforge/tests/data/msas/: 5vht_A.a3m
modelforge/tests/data/ncaa/: penicillin_ts2_as_ncaa.cif
(+2526 files in other folders)
