[project]
name = "rf3"
dynamic = ["version"]
description = "Open-source biomolecular structure prediction for all molecules of life."
readme = "README.md"
requires-python = ">= 3.12"
authors = [
    { name = "Institute for Protein Design", email = "contact@ipd.uw.edu" },
]
license = { file = "LICENSE.md" }

classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: BSD License",
]
dependencies = [
    # ...ml tools
    "torch>=2.2.0,<3",
    "lightning>=2.4.0,<2.5",
    "einops>=0.8.0,<1",
    "einx>=0.1.0,<1",
    "opt_einsum>=3.4.0,<4",
    "dm-tree>=0.1.6,<1",
    # ... kernels (Linux only)
    "cuequivariance_ops_cu12>=0.5.0; sys_platform == 'linux'",
    "cuequivariance_ops_torch_cu12>=0.5.0; sys_platform == 'linux'",
    "cuequivariance_torch>=0.5.0; sys_platform == 'linux'",
    # ... configuration & CLI
    "rootutils>=1.0.7,<1.1",
    "hydra-core>=1.3.0,<1.4",
    "environs>=11.0.0,<12",
    # ... logging
    "wandb>=0.15.10,<1",
    "rich>=13.9.4,<14",
    # ... typing & documentation
    "jaxtyping>=0.2.17,<1",
    "beartype>=0.18.0,<1",

    # ... dataloading
    "atomworks==1.0.2"
]


[project.optional-dependencies]
dev = [
    # Linters & formatters
    "ruff==0.8.3",
    # Debugger/interactive
    "debugpy>=1.8.5,<2",
    "ipykernel>=6.29.4,<7",
    # Testing tools
    "pytest>=8.2.0,<9", # testing framework
    "pytest-testmon>=2.1.1,<3", # run only tests related to changed code
    "pytest-xdist>=3.6.1,<4", # run tests in parallel
    "pytest-dotenv>=0.5.2,<1", # load environment variables from .env file
    "pytest-cov>=4.1.0,<5", # generate coverage report
    "pytest-benchmark>=5.0.0,<6", # benchmark tests for speed
]
[project.scripts]
rf3 = "modelhub.cli:app"
# Build settings ----------------------------------------------------------------------
[build-system]
requires = [
    "hatchling",
    "hatch-vcs == 0.4",
]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/modelhub/version.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/modelhub"]

# Formatting & linting settings -------------------------------------------------------
[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "env",
    ".venv",
    "venv",
    "*.ipynb",
    "dev.py",
    "archive",
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
docstring-code-format = true
docstring-code-line-length = 88

[tool.ruff.lint]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Sort imports
extend-select = ["I", "F401"]

ignore = [
    "F722", # for jaxtyping shape annotation
    "F821", # temporary to avoid jaxtyping warnings, see: https://github.com/astral-sh/ruff/issues/17386
    "E741",  # enable us to use variables like "L"
]

[tool.pyright]
typeCheckingMode = "off"
